[project]
authors = [
    { name = "Nicola Soranzo", email = "nicola.soranzo@earlham.ac.uk" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "PyYAML",
    "requests",
]
description = "Recipes and continuous integration to build Python wheels"
license = "MIT"
license-files = [
    "LICENSE",
]
maintainers = [
    { name = "Nicola Soranzo", email = "nicola.soranzo@earlham.ac.uk" },
]
name = "wheelforge"
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.darker]
isort = true

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
# Exceptions:
# B9 flake8-bugbear opinionated warnings
# E501 is line length (delegated to black)
ignore = ["B9", "E501"]
